--- a/paper.bib
+++ b/paper.bib
@@ -386,6 +386,10 @@ year = {2013}
   title = {{Pica8 OpenFlow-enabled switches}},
   Howpublished = {\url{http://www.pica8.com/products/pre-loaded-switches}},}
 
+@misc{edge-core-switch,
+  title = {{Edge Core switches}},
+  Howpublished = {\url{http://www.edge-core.com/productsKind.php?cls=1}},}
+
 @misc{hp-switch,
   title = {{HP OpenFlow-enabled switches}},
   Howpublished = {\url{http://h17007.www1.hpe.com/cz/en/networking/solutions/technology/sdn/portfolio.aspx#infrastructure}},}
