--- a/paper.bib
+++ b/paper.bib
@@ -633,13 +633,13 @@ year = {2013}
 }
 
 @article{seo2014,
-author = "Kyoung-Taek Seo and Hyun-Seo Hwang and Il-Young Moon and Oh-Young Kwon and Byeong-Jun Kim",
-doi = "10.14257/astl.2014.66.25",
-publisher = "Science and Engineering Research Support Society",
-title = "Performance comparison analysis of Linux container and virtual machine for building cloud",
-url = "http://onlinepresent.org/proceedings/vol66\_2014/25.pdf",
-urldate = "2017-02-25",
-year = "2014"
+author = {Kyoung-Taek Seo and Hyun-Seo Hwang and Il-Young Moon and Oh-Young Kwon and Byeong-Jun Kim},
+doi = {10.14257/astl.2014.66.25},
+publisher = {Science and Engineering Research Support Society},
+title = {Performance comparison analysis of Linux container and virtual machine for building cloud},
+url = {http://onlinepresent.org/proceedings/vol66\_2014/25.pdf},
+urldate = {2017-02-25},
+year = {2014}
 }
 
 @article{TinKamHo1998,
