the fourth version

--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -566,12 +566,12 @@ F1\ score = \dfrac{2\times Precision\times Recall}{Precsion + Recall}
 \end{equation}
 
 \begin{table}[!t]
-\caption{40 POPULAR APPLICATIONS’ AVERAGE F1 SCORE IN 10 ROUNDS}
+\caption{40 POPULAR APPLICATIONS’ AVERAGE \\ F1 SCORE IN 10 ROUNDS}
 \label{table:classification_result}
 \centering
 \begin{tabular}{|l|l|l|l|}
 \hline
-Application name    & Average F1 score    & Application name  & Average F1 score   \\ \hline
+Application name    & \begin{tabular}[c]{@{}l@{}}Average \\ F1 score\end{tabular}    & Application name  & \begin{tabular}[c]{@{}l@{}}Average \\ F1 score\end{tabular}   \\ \hline
 OneDrive            & 0.991255            & Trello            & 0.988889           \\ \hline
 gamerAnimad         & 0.985714            & Dropbox           & 0.985714           \\ \hline
 AmazonMusi          & 0.977461            & MEGAsync          & 0.968889           \\ \hline
