--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -188,7 +188,7 @@ Forwarding Service is a basic service that forward traffic to its destination an
 \subsubsection{QoS}
 Quality of Service (QoS) are always used to control the traffic flows of a network and prevent the traffic to exceed the network capacity and cause traffic congestion. Therefore we implement the bandwidth management using meter which is defined within OpenFlow protocol 1.3 to set the limitation of the bandwidth.
 Beside achieving network functions virtualization with SDN technology, we also make the network administrator manage and monitor a network more easily. As a result, we can offer the user the best network quality in the limited network resource without traffic congestion.
-In this paper, our QoS integrates with a flow classification engine and offers the three ways of bandwidth management.
+In this paper, our QoS integrates with a flow classification engine and offers the two ways of bandwidth management.
 
 \begin{itemize}[\IEEEsetlabelwidth{Z}]
 \item For a specific host.
@@ -330,12 +330,12 @@ In order to gather per-session statistics information, 5-tuple rules are needed.
 
 
 \subsection{QoS}
-QoS service is mainly for traffic control and we provide two management funtion for QoS service. We will introduce these three strategy first and then discuss the flow table order of QoS service in multiple table model.
+QoS service is mainly for traffic control and we provide two management funtion for QoS service. We will introduce these two strategy first and then discuss the flow table order of QoS service in multiple table model.
 
 \subsubsection{Rate limitation of hosts}
 When some hosts take up a lot of bandwidth of network, it will make other hosts in slow speed or make traffic congestion. To prevent this, rate limiting is used to control the rate of traffic from a host. For implementing the host rate limitation, we create a meter for desired bandwidth first and then add a flow, of which match is host’s mac address and action is the meter we just created.
 
-The concept of this option is shown in Fig. \ref{fig:mft_qos_rate_host}. In T0, Host 1 and Host 2 are not limited yet. Since host 2 takes up a lot of bandwidth from network in T0 to T1, the network administrator sets Host 2 rate-limited under 400 Kbps. When controller receive this request, marked as (a), it will create a new meter with meter id = 1 and bandwidth = 400 Kbps, and set the rule in the flow table with destination MAC address = MAC address of Host 1 and meter = 1. According to our flow table, it will limit the rate of the target host. Then the traffic from Host 2 will reduce and be limited with 400Kbps immediately. The similar situation also occurs to Host 1 in T2. The administrator chooses to set Host 1 under 600 Kbps, marked as (b), and then traffic from Host 1 will be limited with 600Kbps.
+The concept of this option is shown in Fig. \ref{fig:mft_qos_rate_host}. In T0, Host 1 and Host 2 are not limited yet. Since Host 2 takes up a lot of bandwidth from network in T0 to T1, the network administrator sets Host 2 rate-limited under 400 Kbps. When controller receive this request, marked as (a), it will create a new meter with meter id = 1 and bandwidth = 400 Kbps, and set the rule in the flow table with destination MAC address = MAC address of Host 1 and meter = 1. According to our flow table, it will limit the rate of the target host. Then the traffic from Host 2 will reduce and be limited with 400Kbps immediately. The similar situation also occurs to Host 1 in T2. The administrator chooses to set Host 1 under 600 Kbps, marked as (b), and then traffic from Host 1 will be limited with 600Kbps.
 
 
 \begin{figure}[!t]
@@ -353,8 +353,9 @@ There are more and more network’s applications used such as online games, vide
 In order to rate limit for a certain application, we need to gathering per-flow statistics information first. When
 a connection is created, the first packet of this connection will be handled by the forwarding service and add 5-tuple rules into SDN switch, so we can get the bandwidth information of per-flow connection. (See subsection \ref{ssec:forwarding} for details). With the classified result of application identification, we can know the application type of each connection.
 
-When network administrator request to rate limit a certain application to a certain bandwidth, we will equally distribute the bandwidth to each connection of the application. The controller set all flows belong to the same application into the same meter, and modifying the bandwidth of meter to achive our goal. For instance, if there is an application and we can find out which flows belong to this application through the flow classification engine and we want to limit this application to 1000Kbps. As Figure. \ref{fig:mft_qos_rate_app}, in T0, we know there are 3 connections belong this application and we will set the bandwidth of meter to each link with 1000/3 = 333Kbps. In T2, there are more two connections added to this application and we will reset the bandwidth of meter to each links with 1000/5 = 200Kbps. In T2, there is a connection ended by this application, we will reset the bandwidth of meter to each links with 1000/4 = 250Kbps, therefore. Whereas, the sum of bandwidth from this application is always being 1000 Kbps. That is, the bandwidth will be dynamically adjusted.
+When network administrator request to rate limit a certain application to a certain bandwidth, we will equally distribute the bandwidth to each connection of the application. The controller set all flows belong to the same application into the same meter, and modifying the bandwidth of meter to achive our goal. For instance, if there is an application and we can find out which flows belong to this application through the flow classification engine and we want to limit this application to 1000Kbps. As Figure. \ref{fig:mft_qos_rate_app}, in T0, we know there are 3 connections belong this application and we will set the bandwidth of meter to each link with 1000/3 = 333Kbps. In T2, there are more two connections added to this application and we will reset the bandwidth of meter to each links with 1000/5 = 200Kbps. In T2, there is a connection ended by this application, we will reset the bandwidth of meter to each links with 1000/4 = 250Kbps, therefore. Whereas, the sum of bandwidth from this application is always being 1000 Kbps. That is, the bandwidth will be dynamically adjusted according the numbers of connections.
 
+It is worth mentioning that we would not change any rules in flow table and we only change the bandwidth of the correspond meter in the meter table. Therefore, there only have a little overhead to switch and controller.
 \begin{figure}[!t]
 \centering
 \includegraphics[width=3in]{./figures/mft_qos_rate_app}
