--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -34,28 +34,28 @@
 % title
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Performance Optimization of Service Chain \\for vCPE in Small Size Network \\with OpenFlow Switch}
+\title{Performance Optimization of Service Chain for vCPE in Small Size Network with OpenFlow Switch}
 
 % author names and IEEE memberships
-% \author{
-% \IEEEauthorblockN{
-% I-Ju Liao\IEEEauthorrefmark{1},
-% Chi-Hsuan Li\IEEEauthorrefmark{1},
-% I-Hsien Hsu\IEEEauthorrefmark{1},
-% Chia-Chi Chen\IEEEauthorrefmark{1},
-% Ching-Hsuan Chen\IEEEauthorrefmark{2},
-% Che-Wei Lin\IEEEauthorrefmark{2},
-% Sheng-Jung Wu\IEEEauthorrefmark{1} and
-% Nen-Fu Huang\IEEEauthorrefmark{1}
-% }
-% \IEEEauthorblockA{
-% \IEEEauthorrefmark{1}
-% Department of Computer Science National Tsing Hua University, Hsinchu, Taiwan\\
-% }
-% \IEEEauthorblockA{\IEEEauthorrefmark{2}
-% Institute of Communication Engineering National Tsing Hua University, Hsinchu, Taiwan\\
-% }
-% }
+\author{
+\IEEEauthorblockN{
+Nen-Fu Huang\IEEEauthorrefmark{1}
+Chia-An Li\IEEEauthorrefmark{1},
+Chi-Hsuan Li\IEEEauthorrefmark{1},
+Chia-Chi Chen\IEEEauthorrefmark{1},
+I-Hsien Hsu\IEEEauthorrefmark{1},
+Che-Chuan Li \IEEEauthorrefmark{1},
+Ching-Hsuan Chen\IEEEauthorrefmark{2} and,
+I-Ju Liao\IEEEauthorrefmark{1}
+}
+\IEEEauthorblockA{
+\IEEEauthorrefmark{1}
+Department of Computer Science National Tsing Hua University, Hsinchu, Taiwan\\
+}
+\IEEEauthorblockA{\IEEEauthorrefmark{2}
+Institute of Communication Engineering National Tsing Hua University, Hsinchu, Taiwan\\
+}
+}
 
 % The paper headers
 % \markboth{Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2015}%
@@ -67,12 +67,12 @@
 % As a general rule, do not put math, special symbols or citations
 % in the abstract or keywords.
 \begin{abstract}
-This Article is about a system how to optimize a service chain in SMB Network. There are many vCPE researches on Internet but a few to discuss about organization of Openflow switch and NFVs. This paper will propose a framework to optimize and manage NFVs with multi tables of Openflow switch. Most of paper talking about how to build architecture in Core Network of ISP, this paper will focus on how to use tables in SDN switches to maximum efficiency on Internet.
+In the last decade, along with the continuously developing of SDN, numerous SDN applications have played important roles in modern network. vCPE is one of potential applications can make game change because it can reduce OPEX and CAPEX in the same time. This service compose of many technologies with complex architecture like NFV, VNF and Service Chaining. Many researches discuss algorithm or mechanism to link any VNFs as a NFV then connect NFVs as a service chain in cloud. Nevertheless, the hardware resource and characteristic of SDN switch that never mention before may waste in this architecture. In this paper, a vCPE framework with table management based on cloud is implemented. The proposed of vCPE framework is to create a VNF using resource in SDN switch and coordinate with service chain on cloud. The system is also integrated with an application identification engine based on machine learning algorithms thus providing flow control in vCPE framework with confidence. Experimental results show that the framework provide high performance in VNF even compete over legacy equipment.
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-Software defined networking, vCPE
+SDN, vCPE, VNF, NFV, OpenFlow
 \end{IEEEkeywords}
 
 \IEEEpeerreviewmaketitle{}
@@ -84,8 +84,23 @@ Software defined networking, vCPE
 % Introduction
 % First paragraph of paper need be big Alhabet
 \section{Introduction}
-\IEEEPARstart{T}{his} document is a template for Microsoft Word versions 6.0 or later. If you are reading a paper or PDF version of this doconference.
-By Eric
+\IEEEPARstart{S}{DN} has been developing almost a decade since the first Openflow article had be presented in 2008. Openflow gives a brand new viewpoint on network research, and makes innovation on industries. This technic proposed not just a novel architecture but also bring out more methods of flexible traffic engineering. After tons of implementations and researches had been proposed, this architecture exposed some weakness in performance. The main concept of this architecture is separating data plane and control plane that put smart control and multi-path into real world. But legacy hardware design eventually put this perfect design into reality. To achieve high speed packet exchange, ternary content-addressable memory (TCAM) plays an important role in legacy fabric switching. This hardware design speed up the packet switching but it also cause high cost and less size problems.
+In the beginning, most of SDN switch used legacy hardware design and just add software API support for temporary solution. The smaller TCAM size comes the less flow control rules but it can keep high performance in packet switching. It brings out inter-datacenter dynamic traffic routing because that scenario doesn’t need much flow entries.
+At the same time as SDN was developed, Network Function Virtualization (NFV) has been introduced by Telco operators. Operators want to reduce their cost on maintaining old telco platform which may has been operated in 50 years. To replace the old platform with high maintenance cost, they use virtual machine (VM) based on new computers as solutions. This method can really save a lot of money in maintaining old platform but not all of operators have the same requirement as AT&T; there is another idea about reducing OPEX and CAPEX in enterprise networks that is vCPE which was innovated by NEC. vCPE manage network functions on operation side to reduce cost which was deployed on cloud. Although both of technical ideas are perfect, it still address two critical problems. The first one is the lack of hardware support because these ideas need large size of tables to achieve multi VNF support. And the other is VM based on cloud may slow down the high speed etwork exchanging network.
+From Pica-8 finished their first OpenFlow switched, there are so many implementation method on a SDN switch. Even Open Network Foundation (ONF) has a series of testing processes, it can’t shows completely testing result of SDN switch especially performance. Let us take flow entries as example, there are single table and multi table architectures much more based on hardware or software. Bandwidth control APIs have been an option in OpenFlow 1.3 but there are many switches still didn’t support these API. Even it did support, there are still at least two implementation methods should be noticed. Meters and per queue show different ways controlling bandwidth not mention to accuracy of bandwidth.
+Service chain is another concept with vCPE framework because enterprise will apply a bulk of network services. This technic inherit weakness of SDN switches and vCPE so there is no standard to unified interface to link all services. It’s hard to combine and link all switches and cloud service in such complex situation. Different services on cloud must be working fine with different SDN switches and we believe that’s why most of service chain was implemented in VM on the cloud.
+
+Therefore, the purpose of this paper can be summarized as follows:
+
+\begin{enumerate}
+\item To achieve extremely speed of packet exchanging of vCPE in small size network, this study proposed a mechanism to control OpenFlow tables which is in different hardware switches such as Lagopus, Pica-8 and Edgecore. It supports single table and multi-table implementation in different switches and sends status and information message to Ryu controller. This mechanism brings out a novel implementation method of VNF that combine hardware and software operations. It not only makes hardware usage more efficiency but also stays maximum flexibility in NFV deployment.
+
+\item To cover most of NFV framework, this vCPE framework offer a multi cloud management feature. It can working with OpenDaylight on OpenStack and Ryu on Docker perfectly. Users can deploy their NFV features in any kind of VM system even in public cloud, and monitor it in same system.
+\item To control flows with confidence, an application identification algorithm might be in consideration. The first thing comes out must be Intrusion Detection System (IDS) or Intrusion Prevention System (IPS) but there are 2 major weakness of this two kind of technic. The first is it spends a lot of time to identify connections, and network speed may hang on IPS. The other is it may can’t figure out encryption connections because not all of IDS or IPS have key matching feature. Most of modern cloud applications use https protocol as basic communication method which makes matter even worse. This study gives an algorithm to identify applications with statistical method with machine learning. The algorithm only use connection “attributes” to train an identification models such as packet direction, packet length. Afterward, the algorithm can identify network applications by this model. Even encryption connection can be identified with high accuracy because the algorithm monitor packet in statistical way instead of trying to decode it.
+\item To analysis performance of this vCPE framework, this study integrate all of functions mention above to evaluate it even compare with the legacy network equipments.
+This paper is structured as follows. Section II introduce the overall architecture of the framework what this study proposed. Section III describe multi table management mechanism in the beginning. Rest of section will show how to implement VNF with the mechanism. Section IV considers application identification in SDN because system can do nothing if the system doesn’t know what kind of application running on the network. Section V analytically performance of vCPE framework what we proposed include comparison with traditional network devices. Conclusion and future works will summary in the last section.
+\end{enumerate}
+
 
 
 
@@ -103,7 +118,7 @@ By Eric
 With the concept of SDN-enabled VNFs \cite{sdn-enabled} \cite{manage-nve}, SDN technology work not only for traffic steering but also as a part of network functions. In this idea, network functions have been achieved by the synergies between computer infrastructures(NFV) and network infrastructures(NFVI) \cite{nfv2014-v121}\cite{nfv2014-v111}\cite{nfv2015}, shown in Fig. \ref{fig:desc_nfv_overview}. The former is a VNF controller, mainly responsible for dealing with stateful processing. The latter is a SDN switch \cite{sp:openflow1.3}, used for stateless processing.
 
 \subsubsection{Stateful Processing Component (VNF controller in container)}
-This component have to control the workflow, keep the state associated with the VNF, and provide interface for service providers or customers to configure and update the behavior of the stateless datapath processing component. We use SDN controller to implement the NFV controller and it’s worth noting that we use southbound APIs of SDN controller framework to handle the interface between the stateful and stateless component with OpenFlow protocol \cite{onf}, which was originally designed for this.
+This component have to control the workflow, keep the state associated with the VNF, and provide interface for service providers or customers to configure and update the behavior of the stateless datapath processing component. We use SDN controller to implement the NFV controller and it’s worth noting that we use southbound APIs of SDN controller framework to handle the interface between the stateful and stateless component with OpenFlow protocol, which was originally designed for this.
 
 \subsubsection{Stateless Processing Component (SDN datapath)}
 Stateless processing component, are implemented by SDN datapath resources, which is optimized for data plane traffic processing. Since SDN switch have decoupled the control plane and data plane, so it can accept the control message from the stateful processing component.
