--- a/paper.bib
+++ b/paper.bib
@@ -82,7 +82,7 @@ year = {2013}
   month = {dec},
   publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
   author = {Pau Minoves and Ole Frendved and Bo Peng and Andrew Mackarel and Dave Wilson},
-  title = {Virtual {CPE}: Enhancing {CPE}{\textquotesingle}s deployment and operations through virtualization},
+  title = {Virtual {CPE}: Enhancing {CPE}'s deployment and operations through virtualization},
   booktitle = {4th {IEEE} International Conference on Cloud Computing Technology and Science Proceedings}
 }
 
