--- a/paper.bib
+++ b/paper.bib
@@ -675,3 +675,15 @@ year = {2014}
   publisher = {Association for Computational Linguistics},
   address = {Stroudsburg, PA, USA},
 }
+
+@incollection{sdn-ft,
+author = "Maciej Kuźniar and Peter Pereš{\' i}ni and Dejan Kostić",
+booktitle = "Passive and Active Measurement",
+doi = "10.1007/978-3-319-15509-8\_26",
+pages = "347-359",
+publisher = "Springer Science + Business Media",
+title = "What you need to know about SDN flow tables",
+url = "http://wan.poly.edu/pam2015/papers/73.pdf",
+urldate = "2016-11-01",
+year = "2015"
+}
