--- a/paper.bib
+++ b/paper.bib
@@ -354,6 +354,10 @@ year = {2013}
   title = {{OpenStack}},
   Howpublished = {\url{https://www.openstack.org/}},}
 
+@misc{docker,
+  title = {{Docker}},
+  Howpublished = {\url{https://www.docker.com/}},}
+
 @misc{onf,
   title = {{Open Networking Foundation}},
   Howpublished = {\url{https://www.opennetworking.org/index.php}},}
@@ -686,4 +690,44 @@ title = "What you need to know about SDN flow tables",
 url = "http://wan.poly.edu/pam2015/papers/73.pdf",
 urldate = "2016-11-01",
 year = "2015"
+}
+
+@inproceedings{service-chain,
+  doi = {10.1109/ewsdn.2014.14},
+  url = {https://doi.org/10.1109%2Fewsdn.2014.14},
+  year  = {2014},
+  month = {sep},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Jeremias Blendin and Julius Ruckert and Nicolai Leymann and Georg Schyguda and David Hausheer},
+  title = {Position Paper: Software-Defined Network Service Chaining},
+  booktitle = {2014 Third European Workshop on Software Defined Networks}
+}
+
+@techreport{sdn-new-norm,
+author = "Open Networking Foundation",
+title = "Software-defined networking: The new norm for networks",
+url = "https://www.opennetworking.org/images/stories/downloads/sdn-resources/white-papers/wp-sdn-newnorm.pdf",
+year = "2012"
+}
+
+@inproceedings{nfv-placemet,
+  doi = {10.1109/inm.2015.7140281},
+  url = {https://doi.org/10.1109%2Finm.2015.7140281},
+  year  = {2015},
+  month = {may},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Marcelo Caggiani Luizelli and Leonardo Richter Bays and Luciana Salete Buriol and Marinho Pilla Barcellos and Luciano Paschoal Gaspary},
+  title = {Piecing together the {NFV} provisioning puzzle: Efficient placement and chaining of virtual network functions},
+  booktitle = {2015 {IFIP}/{IEEE} International Symposium on Integrated Network Management ({IM})}
+}
+
+@inproceedings{nfv-placement-model,
+  doi = {10.1109/cnsm.2014.7014205},
+  url = {https://doi.org/10.1109%2Fcnsm.2014.7014205},
+  year  = {2014},
+  month = {nov},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Hendrik Moens and Filip De Turck},
+  title = {{VNF}-P: A model for efficient placement of virtualized network functions},
+  booktitle = {10th International Conference on Network and Service Management ({CNSM}) and Workshop}
 }
