--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -79,7 +79,7 @@ SDN, vCPE, VNF, NFV, OpenFlow
 \IEEEPARstart{S}{DN}\cite{sdn-new-norm} has been developing almost a decade since the first Openflow article had be presented in 2008\cite{openflow-campus-network}. Openflow\cite{sp:openflow1.3} gives a brand new viewpoint on network research, and makes innovation on industries. This technic proposed not just a novel architecture but also bring out more methods of flexible traffic engineering. After tons of implementations and researches had been proposed, this architecture exposed some weakness in performance. The main concept of this architecture is separating data plane and control plane that put smart control and multi-path into real world. But legacy hardware design eventually put this perfect design into reality. To achieve high speed packet exchange, ternary content-addressable memory (TCAM) plays an important role in legacy fabric switching. This hardware design speed up the packet switching but it also cause high cost and less size problems.
 In the beginning, most of SDN switch used legacy hardware design and just add software API support for temporary solution. The smaller TCAM size comes the less flow control rules but it can keep high performance in packet switching. It brings out inter-datacenter dynamic traffic routing because that scenario doesn’t need much flow entries.
 At the same time as SDN was developed, Network Function Virtualization (NFV) \cite{nfvwp}\cite{laptop-sdn} has been introduced by Telco operators. Operators want to reduce their cost on maintaining old telco platform which may has been operated in 50 years. To replace the old platform with high maintenance cost, they use virtual machine (VM) based on new computers as solutions. This method can really save a lot of money in maintaining old platform but not all of operators have the same requirement as AT\&T; there is another idea about reducing OPEX and CAPEX in enterprise networks that is vCPE which was innovated by NEC\cite{nec-vcpe}. vCPE manage network functions on operation side to reduce cost which was deployed on cloud. Although both of technical ideas are perfect, it still address two critical problems. The first one is the lack of hardware support because these ideas need large size of tables to achieve multi VNF support. And the other is VM based on cloud may slow down the high speed network exchanging network \cite{nfv-placemet}, \cite{nfv-placement-model}.
-From Pica8 \cite{pica8-switch} finished their first OpenFlow switches, there are so many implementation method on a SDN switch. Even Open Network Foundation (ONF)\ref{onf} has a series of testing processes, it can’t shows completely testing result of SDN switch especially performance. Let us take flow entries as example, there are single table and multi table architectures much more based on hardware or software. Bandwidth control APIs have been an option in OpenFlow 1.3 but there are many switches still didn’t support these API. Even it did support, there are still at least two implementation methods should be noticed. Meters and per queue show different ways controlling bandwidth not mention to accuracy of bandwidth.
+From Pica8 \cite{pica8-switch} finished their first OpenFlow switches, there are so many implementation method on a SDN switch. Even Open Network Foundation (ONF)\cite{onf} has a series of testing processes, it can’t shows completely testing result of SDN switch especially performance. Let us take flow entries as example, there are single table and multi table architectures much more based on hardware or software. Bandwidth control APIs have been an option in OpenFlow 1.3 but there are many switches still didn’t support these API. Even it did support, there are still at least two implementation methods should be noticed. Meters and per queue show different ways controlling bandwidth not mention to accuracy of bandwidth.
 Service chain \cite{service-chain} is another concept with vCPE framework because enterprise will apply a bulk of network services. This technic inherit weakness of SDN switches and vCPE so there is no standard to unified interface to link all services. It’s hard to combine and link all switches and cloud service in such complex situation. Different services on cloud must be working fine with different SDN switches and we believe that’s why most of service chain was implemented in VM on the cloud.
 
 Therefore, the purpose of this paper can be summarized as follows:
@@ -642,5 +642,45 @@ When using our limitation function of application, we can guarantee the traffic 
 \newpage
 \bibliographystyle{ieeetr}
 \bibliography{paper}
+
+\begin{IEEEbiography}
+{Nen-Fu Huang}
+\end{IEEEbiography}
+
+\begin{IEEEbiography}
+{Chia-An Lee} was born in 1988. He received the B.S. degree in Undergraduate Program of Computer Science in 2010 from National Tsing Hua University, Hsinchu, Taiwan.
+Currently he is a Ph.D student of the Department of Computer Science in National Tsing Hua University.
+His research include Software Define Network ,Network Function Virtualization, Moocs, and data analytics.
+\end{IEEEbiography}
+
+\begin{IEEEbiography}
+{Chi-Hsuan Li} received the B.S. degree in Undergraduate Program of Electrical Engineering and Computer Science in 2015 from National Tsing Hua University, Hsinchu, Taiwan. Currently she is a graduate student of the Department of Computer Science in National Tsing Hua University. Her research interest is Software Define Network and Network Function Virtualization.
+\end{IEEEbiography}
+
+\begin{IEEEbiography}
+[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{./avatars/chia-chi.jpg}}]
+{Chia-Chi Chen} was born in 1994 and  received the B.S. degree in Computer Science in 2016 from National Tsing Hua University, Taiwan.
+He is a graduate student and major in Computer Science from National Tsing Hua University now.
+Mr. Chen research chiefly focuses on Software Defined Network in High Speed Network Lab at National Tsing Hua University.
+\end{IEEEbiography}
+
+\begin{IEEEbiography}
+[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{./avatars/i-hsien.jpg}}]
+{I-Hsien Hsu} was born in 1994 and  received the B.S. degree in Computer Science in 2016 from National Tsing Hua University, Taiwan.
+He is a graduate student and major in Computer Science from National Tsing Hua University now. His research mainly focuses on Software Defined Network in High Speed Network Lab at National Tsing Hua University.
+\end{IEEEbiography}
+
+\begin{IEEEbiography}
+{Che-Chuan Li}
+\end{IEEEbiography}
+
+\begin{IEEEbiography}
+[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{./avatars/chin-hsuan.jpg}}]
+{Ching-Hsuan Chen} received the bachelor degree in Computer Science department in 2016 from National Tsing Hua University, Hsinchu, Taiwan. Now he is a graduate student of the Institute of Communications Engineering in the same university, National Tsing Hua University. His research mainly focuses on Software Define Network and Network Function Virtualization.
+\end{IEEEbiography}
+
+\begin{IEEEbiography}
+{I-Ju Liao}
+\end{IEEEbiography}
 
 \end{document}
